@@ -92,8 +92,8 @@ class TestGemPackageTarInput < TarTestCase
           tar_input.extract_entry @tempdir, entry
           name = File.join @tempdir, entry.header.name
 
-          if entry.directory?
-            assert File.dir?(name)
+          if entry.directory? then
+            assert File.directory?(name)
           else
             assert File.file?(name)
             assert_equal @entry_sizes[i], File.stat(name).size
@@ -111,7 +111,7 @@ class TestGemPackageTarInput < TarTestCase
 
     @entry_files.each_with_index do |x, i|
       assert File.file?(x)
-      assert_equal @entry_contents[i], File.read_b(x)
+      assert_equal @entry_contents[i], Gem.read_binary(x)
     end
   end
 
